force-app/main/default/objects/CBK_Fusion__c/CBK_Fusion__c.object-meta.xml
<CustomObject>
    <label>Fusión/Split de Registros</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Nombre</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fusiones/Split  de Registros</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>