force-app/main/default/objects/CBK_Fusion__c/fields/ApexClass__c.field-meta.xml
<CustomField>
    <fullName>ApexClass__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ApexClass</label>
    <length>120</length>
    <type>Text</type>
</CustomField>