force-app/main/default/objects/CBK_Fusion__c/fields/Config__c.field-meta.xml
<CustomField>
    <fullName>Config__c</fullName>
    <label>Configuración</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fusion_Confidenciales</fullName>
                <label>Fusión Confidenciales</label>
            </value>
            <value>
                <fullName>Split_Confidencial</fullName>
                <label>Split Confidenciales</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>