force-app/main/default/objects/CBK_Fusion__c/fields/Pendiente__c.field-meta.xml
<CustomField>
    <fullName>Pendiente__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Pendiente</label>
    <type>Checkbox</type>
</CustomField>