force-app/main/default/objects/CBK_Fusion__c/fields/Resultado__c.field-meta.xml
<CustomField>
    <fullName>Resultado__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Resultado</label>
    <type>TextArea</type>
</CustomField>