force-app/main/default/objects/CBK_Fusion__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APEX</fullName>
                <label>Custom</label>
            </value>
            <value>
                <fullName>Merge_Fields</fullName>
                <label>Merge con selección de campos</label>
            </value>
            <value>
                <fullName>Merge</fullName>
                <default>true</default>
                <label>Merge estándar</label>
            </value>
            <value>
                <fullName>Merge_NULLS</fullName>
                <label>Merge con campos no Nulos</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>