force-app/main/default/objects/CBK_Fusion__c/validationRules/Apex_Class.validationRule-meta.xml
<ValidationRule>
    <fullName>Apex_Class</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT( Tipo__c)=&apos;APEX&apos;, 
 ISBLANK(ApexClass__c),
	ISBLANK(TEXT(Config__c)))</errorConditionFormula>
    <errorMessage>Debe informarse la clase Apex a ejecutar</errorMessage>
</ValidationRule>