force-app/main/default/objects/CBK_Fusion__c/validationRules/Config.validationRule-meta.xml
<ValidationRule>
    <fullName>Config</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
(ISBLANK(TEXT(Tipo__c))),
(ISBLANK(TEXT(Config__c)))
)</errorConditionFormula>
    <errorMessage>Debe seleccionarse Tipo de fusión o informarse una configuración</errorMessage>
</ValidationRule>