force-app/main/default/objects/CBK_Fusion__c/validationRules/Regla.validationRule-meta.xml
<ValidationRule>
    <fullName>Regla</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				!(ISBLANK(TEXT(Tipo__c))),
				TEXT( Tipo__c)!=&apos;APEX&apos;, 
 ISBLANK(TEXT(Entidad__c)))</errorConditionFormula>
    <errorMessage>Debe informarse el objeto sobre el realizar va la fusión</errorMessage>
</ValidationRule>