force-app/main/default/objects/CBK_Fusion__c/listViews/Errores.listView-meta.xml
<ListView>
    <fullName>Errores</fullName>
    <columns>NAME</columns>
    <columns>Entidad__c</columns>
    <columns>Id_Principal__c</columns>
    <columns>ID_Secundario__c</columns>
    <columns>Config__c</columns>
    <columns>Tipo__c</columns>
    <columns>ApexClass__c</columns>
    <columns>Pendiente__c</columns>
    <columns>Error__c</columns>
    <columns>Resultado__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Error__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Errores</label>
</ListView>